[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://resources/shaders/planet.shader" type="Shader" id=2]
[ext_resource path="res://planet.gd" type="Script" id=3]

[sub_resource type="OpenSimplexNoise" id=1]
period = 1.0

[sub_resource type="NoiseTexture" id=2]
width = 32
height = 32
seamless = true
noise = SubResource( 1 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 2 )
shader_param/main_color = Color( 0.352941, 0.121569, 0.00784314, 1 )
shader_param/second_color = Color( 0.811765, 0.278431, 0.0705882, 1 )
shader_param/polar_ice_color = Color( 0.8, 0.8, 0.8, 1 )
shader_param/atmosphere_color = Color( 0.176471, 0.262745, 0.427451, 0.180392 )
shader_param/selection_color = Color( 0.5, 0.5, 0, 0.6 )
shader_param/selection_width = 0.08
shader_param/selection_gap = 0.04
shader_param/selection_speed = 0.4
shader_param/rotation_speed = 0.1
shader_param/seed = Vector2( 0.103, -0.39 )
shader_param/size = 0.399
shader_param/striping = 1.432
shader_param/ice_amount = 0.0
shader_param/main_and_second_colors_mixing = 0.426
shader_param/main_and_second_colors_distribution = 0.502
shader_param/noise = SubResource( 2 )

[node name="planet" type="Node2D"]
script = ExtResource( 3 )

[node name="sprite" type="Sprite" parent="."]
material = SubResource( 3 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="tween" type="Tween" parent="."]

[node name="Button" type="Button" parent="."]
margin_left = -49.7773
margin_top = -50.2227
margin_right = 50.2227
margin_bottom = 49.7773
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="Button" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
